[package]
name = "asciii-cal-backend"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]

[dependencies]
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rocket_contrib = "0.3.2"

[dependencies.asciii]
git= "https://github.com/ascii-dresden/asciii"
version= "3.1.0"
default-features = false
rev = "dd2618c42e50dcccc37b324929911b2ba64765d0"
